<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical">

    <Button
        android:id="@+id/jaskaranPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/permission" />


    <ImageView
        android:id="@+id/jaskaranImage"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/anim" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="@string/selectSpeed"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">

        <RadioGroup
            android:id="@+id/jaskaranRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/jaskaranRadio1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed1" />

            <RadioButton
                android:id="@+id/jaskaranRadio2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed2" />

            <RadioButton
                android:id="@+id/jaskaranRadio3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed3" />

            <RadioButton
                android:id="@+id/jaskaranRadio4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed4" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/jaskaranStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="startAnimation"
            android:text="@string/start" />

        <Button
            android:id="@+id/jaskaranStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="stopAnimation"
            android:text="@string/stop" />
    </LinearLayout>

</LinearLayout>