<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_error"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/jaskaranFname"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/fname"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jaskaranLname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/lname"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/jaskaranMoon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/moon"
        android:scaleType="centerCrop"
        android:src="@drawable/img_moon" />

    <ImageView
        android:id="@+id/jaskaranEarth"
        android:layout_width="138dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/earth"
        android:scaleType="centerCrop"
        android:src="@drawable/img_earth" />

    <Button
        android:id="@+id/jaskaranStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="14dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/jaskaranStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="14dp"
        android:text="@string/start" />

</LinearLayout>
